--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,28 @@
-asgiref==3.5.0
-blinker==1.4
-Brotli==1.1.0
-click==8.1.7
-command-not-found==0.3
+attr==0.3.2
+ConfigParser==6.0.1
+contextlib2==21.6.0
 cryptography==3.4.8
-dbus-python==1.2.18
-distlib==0.3.4
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
-dj-database-url==2.1.0
+dj_database_url==2.1.0
 Django==3.2.1
+Django==3.2.12
+docutils==0.20.1
+Fabric==3.2.2
 filelock==3.6.0
-gunicorn==21.2.0
-h11==0.14.0
-httplib2==0.20.2
-importlib-metadata==4.6.4
-jeepney==0.7.1
+HTMLParser==0.0.2
+importlib_metadata==4.6.4
+ipython==8.12.3
+ipywidgets==8.1.2
+Jinja2==3.1.3
+jnius==1.1.0
 keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-more-itertools==8.10.0
-netifaces==0.11.0
-oauthlib==3.2.0
-packaging==24.0
-pillow==10.2.0
-platformdirs==2.5.1
-psycopg==3.1.18
-psycopg-binary==3.1.18
-psycopg2-binary==2.9.9
-pycodestyle==2.8.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu2
-pytz==2022.1
-PyYAML==5.4.1
-SecretStorage==3.3.1
-six==1.16.0
-sqlparse==0.4.2
-systemd-python==234
-typing_extensions==4.10.0
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-uvicorn==0.28.0
-virtualenv==20.13.0+ds
-wadllib==1.3.6
-whitenoise==6.6.0
-zipp==1.0.0
+mock==5.1.0
+Pillow==10.2.0
+protobuf==4.25.3
+pyOpenSSL==24.1.0
+railroad==0.5.0
+redis==5.0.3
+Sphinx==7.2.6
+thread==1.0.0
+tornado==6.4
+urllib3_secure_extra==0.1.0
+xmlrpclib==1.0.1
