--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,11 @@
-attr==0.3.2
-ConfigParser==6.0.1
-contextlib2==21.6.0
-cryptography==3.4.8
-dj_database_url==2.1.0
-Django==3.2.12
-docutils==0.20.1
-Fabric==3.2.2
-filelock==3.6.0
-HTMLParser==0.0.2
-importlib_metadata==4.6.4
-ipython==8.12.3
-ipywidgets==8.1.2
-Jinja2==3.1.3
-jnius==1.1.0
-keyring==23.5.0
-mock==5.1.0
-Pillow==10.2.0
-protobuf==4.25.3
-pyOpenSSL==24.1.0
-railroad==0.5.0
-redis==5.0.3
-Sphinx==7.2.6
-thread==1.0.0
-tornado==6.4
-urllib3_secure_extra==0.1.0
-xmlrpclib==1.0.1
+asgiref==3.7.2
+dj-database-url==2.1.0
+Django==3.2.1
+gunicorn==21.2.0
+packaging==23.1
+psycopg2==2.9.7
+pytz==2023.3.post1
+sqlparse==0.4.4
+typing_extensions==4.7.1
+tzdata==2023.3
+whitenoise==6.5.0
